# chess_vault

./: .env.example  README.md  pyproject.toml
src/chess_vault/: __init__.py  cli.py  config.py
src/chess_vault/analysis/: __init__.py  analyze_service.py  engine.py  features.py  pitfalls.py
src/chess_vault/db/: __init__.py  models.py  session.py
src/chess_vault/ingest/: __init__.py  chesscom_client.py  lichess_client.py  normalize.py  sync_service.py
src/chess_vault/ui/: __init__.py  app.py
tests/: test_analyze_service.py  test_lichess_client.py  test_normalize.py  test_report.py
